# send-msg-discord

./: .env  .gitignore  Cargo.toml  LICENSE
src/: main.rs
