[package]
name = "send-msg-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version = "0.15.0"}
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
http = "0.2.8"
futures-util = "0.3.21"